2003-10-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (_CoderInfo): Added register_function and
	unregister_function members to record the module's register and
	unregister function addresses.
	(OpenModule): Locate the module's register and unregister
	functions and save their address to the module's CoderInfo record.
	(UnloadModule): Invoke the module unregister function using the
	address recorded by OpenModule().
	(TagToFunctionName): If PREFIX_MAGICK_SYMBOLS is defined, then add
	a "Gm" prefix to the register and unregister function names.
	* libtool: Updated libtool files to the latest CVS version.
	* configure.ac: Changed define name from MAGICK_SYMBOL_PREFIX to
	PREFIX_MAGICK_SYMBOLS since support is not available for
	specifying an arbitrary prefix.

2003-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Added --enable-symbol-prefix configure option
	which prepends "Gm" to all GraphicsMagick library symbols using
	the C pre-processor.  In the future, this may change to support
	specifying an arbitrary prefix, depending on experience.
	* magick/studio.h: Include magick/symbols.h.
	* magick/api.h: Include magick/symbols.h.
	* magick/symbols.h: New header to support optionally remapping
	library symbols.  If MAGICK_SYMBOL_PREFIX is defined, then
	library symbols are remapped.

2003-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/api.h: Removed inclusion of <magick/semaphore.h> since it
	is an implementation header.

2003-10-13  Lars Skyum  <lrs@stibo.dk>

	* www/GraphicsMagick.html, www/animate.html, www/composite.html,
	www/conjure.html, www/convert.html, www/display.html, www/gm.html,
	www/identify.html, www/import.html, www/mogrify.html,
	www/montage.html: added documentation for "-define" command line
	option.	
	* doc/brief_options.imdoc, doc/options.imdoc: Added documentation
	for "-define" command line option.
	* doc/gmdocselect, doc/imdocselect: Changed "skipform" label in