@@ -56,6 +56,8 @@
 2003-10-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> VisualMagick/magick/magick_config.h.in: Added
+        PREFIX_MAGICK_SYMBOLS as a configuration option.
   <LI> magick/module.c (_CoderInfo): Added register_function and
         unregister_function members to record the module's register and
         unregister function addresses.<BR>
